[tool.poetry]
name = "aio-odoorpc-base"
description = "Fast, simple Odoo RPC package with sync and async functions to pilot Odoo's jsonrpc API. Check aio-odoorpc for a higher-level, friendlier interface."
version = "0.1.0"
license = "CC0-1.0"
authors = ["mbello <mbello@users.noreply.github.com>"]
repository = "https://github.com/mbello/aio-odoorpc-base"
homepage = "https://github.com/mbello/aio-odoorpc-base"
keywords = ['odoo', 'odoorpc', 'asyncio', 'Odoo RPC API', 'Odoo jsonrpc', 'Odoo asyncio', 'Odoo async', 'Odoo asynchronous']


[tool.poetry.dependencies]
python = "^3.6"

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
