[tool.poetry]
name = "aio-odoorpc-base"
description = "Fast, simple Odoo RPC package with sync and async functions to pilot Odoo's jsonrpc API. Check aio-odoorpc for a higher-level, friendlier interface."
version = "3.0.2"
license = "CC0-1.0"
authors = ["mbello <mbello@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/mbello/aio-odoorpc-base"
homepage = "https://github.com/mbello/aio-odoorpc-base"
keywords = ['odoo', 'odoorpc', 'asyncio', 'aio-odoorpc']


[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpx = ">=0.11.0"
requests = ">=2.22.0"
aiohttp = ">=3.6.2"
beautifulsoup4 = "^4.8.2"
pytest-asyncio = ">=0.10.0"
pytest-benchmark = "^3.2.3"
pytest-xdist = "^1.31.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
